# backlog_toole

./: .env.copy  .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
backlog_tools/: add_milestone_multi.py  delete_milestone_multi.py  fetch_milestones.py  fetch_statuses.py  settings.py
