[tool.poetry]
name = "backlog-tools"
version = "0.1.0"
description = ""
authors = ["t-ibayashi-safie <t-ibayashi@safie.jp>"]
readme = "README.md"
packages = [{include = "backlog_tools"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.5"
python-dotenv = "^0.21.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
